# pydantic-harness

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: gitleaks.yml
backend/core/conversation/: __init__.py  base.py  deps.py  evicting.py  file.py  in_memory.py  summarizing.py
backend/core/hooks/: __init__.py  history.py  history_processors.py  hooks.md  (+2 more)
backend/gateway/: routes.py  schemas.py  sse.py
deploy/k8s/: README.md  kind-cluster.yaml
docs/: k8s-deploy-guide.md  k8s-migration-design.md  k8s-upgrade-guide.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
main_agent/: Dockerfile  agent.py  config.example.yaml  config.py  pyproject.toml  server.py
main_agent/prompts/: EXPERIENCE.md  MEMORY_GUIDANCE.md  SOUL.md  SYSTEM.md
main_agent/tools/: __init__.py  bash.py  file.py  tools.py
sandbox_service/: Dockerfile  app.py  requirements.txt  schemas.py
skills/pdf/: SKILL.md
skills/seedance/: SKILL.md
skills/tavily/: SKILL.md
sub_agents/demo_agent/: .env.example  agent.py  config.py  pyproject.toml  server.py
tests/: conftest.py  test_config.py  test_evicting_memory.py  test_file_conversation.py  test_memory_scanner.py  test_memory_store.py  test_memory_tool.py  test_output_truncation.py  test_recall_tool.py  test_registry.py  test_routes.py  test_sandbox_security.py  test_session_prompt_lock.py  test_sse.py  test_summarizing_lock.py  test_tool_truncation_integration.py
(+53 files in other folders)
