[project]
name = "pydantic-harness"
version = "0.1.0"
description = "Pydantic AI agent harness — shared modules and dev tools"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai,anthropic]",
    "fastapi",
    "uvicorn[standard]",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
